[gd_scene load_steps=13 format=3 uid="uid://d126mtj2j4thf"]

[ext_resource type="Script" path="res://Enemies/Billy/billy.gd" id="1_07erv"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jskm7"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ncq5n"]
material = SubResource("StandardMaterial3D_jskm7")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qwo82"]

[sub_resource type="SphereMesh" id="SphereMesh_n7gec"]
material = SubResource("StandardMaterial3D_qwo82")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_04mq1"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_biasj"]
material = SubResource("StandardMaterial3D_04mq1")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rr6ue"]
albedo_color = Color(1, 1, 0.407843, 1)

[sub_resource type="PrismMesh" id="PrismMesh_x64ui"]
material = SubResource("StandardMaterial3D_rr6ue")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ryej0"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_t1bbh"]
radius = 12.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_gg82o"]
radius = 20.0

[node name="Billy" type="CharacterBody3D" groups=["enemy"]]
script = ExtResource("1_07erv")
SPEED = 2.0
RUN_SPEED = 4.0
TURN_SPEED = 3.5
ENEMY_FOV = 60

[node name="billiyMesh" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="billiyMesh"]
mesh = SubResource("CapsuleMesh_ncq5n")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="billiyMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.606977, -0.187419)
mesh = SubResource("SphereMesh_n7gec")

[node name="MeshInstance3D" type="MeshInstance3D" parent="billiyMesh/MeshInstance3D2"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.175, 0.175, -0.395)
mesh = SubResource("SphereMesh_biasj")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="billiyMesh/MeshInstance3D2"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.175, 0.175, -0.395)
mesh = SubResource("SphereMesh_biasj")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="billiyMesh/MeshInstance3D2"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.319577, 0, 0.551204, -0.00555694)
mesh = SubResource("PrismMesh_x64ui")

[node name="face_dir" type="Node3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_ryej0")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="wait_in_pos_timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="see_player" type="Area3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="see_player"]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0, 0)
shape = SubResource("CylinderShape3D_t1bbh")

[node name="notice_player" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="notice_player"]
shape = SubResource("CylinderShape3D_gg82o")

[node name="vision_cast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.719529, 0)
target_position = Vector3(0, 0, -50)

[node name="vision_cast2" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.35, 0.72, 0)
target_position = Vector3(0, 0, -50)

[node name="vision_cast3" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.35, 0.72, 0)
target_position = Vector3(0, 0, -50)

[connection signal="timeout" from="wait_in_pos_timer" to="." method="_on_wait_in_pos_timer_timeout"]
[connection signal="body_entered" from="see_player" to="." method="_on_see_player_body_entered"]
[connection signal="body_exited" from="see_player" to="." method="_on_see_player_body_exited"]
[connection signal="body_entered" from="notice_player" to="." method="_on_notice_player_body_entered"]
[connection signal="body_exited" from="notice_player" to="." method="_on_notice_player_body_exited"]
